Fix crash on "Close Current Tab" handling

Summary:
_pluggedController disconnection happens  when session is closed
by closeInNormalWay or closeInForceWay and calling
disconnectController leads to Konsole crash.   Also a case when
closeInNormalWay is false was not considered.

BUG: 410607
FIXED-IN: 19.08.1

Test Plan:
1. Open Konsole
2. Open one more tab
3. Try to close Konsole
4. Pick option "Close Current Tab" (assuming you have not check
    'Do not ask again')

Reviewers: #konsole, hindenburg

Reviewed By: #konsole, hindenburg

Subscribers: hindenburg, konsole-devel, #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D23246